Fixed image stretch

--- a/css/main.css
+++ b/css/main.css
@@ -138,8 +138,8 @@ nav ul li .btn:hover {
 }
 .profile {
 	position: absolute;
-	height: 233.31px;
-	width: 350px;
+	width: 233.31px;
+	height: 350px;
 	margin: 130px 0px 0px 50px;
 	display: inline;
 	border-radius: 7px;
